# xw74ByaPqC9WCASm

./: LICENSE  README.md  pyproject.toml
.data/: potential-talents - Aspiring human resources - seeking human resources.csv
.logs/: logs.txt
.models/: model_20231229062630.json  model_20231229064819.json  model_20231229065022.json
p3/: pyproject.toml
p3/src/: cli.py  config.py
p3/src/lambdaMart/: train.py
p3/src/learning_to_rank/: train.py  utils.py
p3/src/manual_ranking/: embedding.py  ranking.py  utils.py
p3/src/p3/: cli.py  embedding.py  preprocessing.py  ranking.py  typings.py
p3/src/watcher/: watch.py
