[tool.poetry]
name = "p3"
version = "0.1.0"
description = ""
authors = ["srkpa <kpanou.rogia@gmail.com>"]
readme = "README.md"
packages = [{include = "p3", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
transformers = "^4.35.2"
pandas = "^2.1.4"
nltk = "^3.8.1"

[tool.poetry.scripts]
cli = "p3.cli:cli"

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
